manifests/petclinic-deployment.yaml
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      app: quarkus-petclinic
      app.kubernetes.io/component: quarkus-petclinic
      app.kubernetes.io/instance: quarkus-petclinic
    name: quarkus-petclinic
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: quarkus-petclinic
    template:
      metadata:
        labels:
          app: quarkus-petclinic
      spec:
        containers:
        - image: petclinic/quarkus-petclinic:1.0.0
          name: quarkus-petclinic
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
