manifests/petclinic-service.yaml
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: quarkus-petclinic
      app.kubernetes.io/component: quarkus-petclinic
      app.kubernetes.io/instance: quarkus-petclinic
    name: quarkus-petclinic
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      deployment: quarkus-petclinic
  status:
    loadBalancer: {}
